fix some findbugs issues